# testharness-webapps

./: .gitignore  Dockerfile  README.md  Todo.md  harness.yaml  justfile  pyproject.toml
.github/: CODEOWNERS
data/default-ng/_canonical/: _metadata.json  contracts.json  invoices.json  leads.json  opportunities.json  order_items.json  orders.json  products.json
data/default-ng/confluence/: pages.json
data/default-ng/dynamics/: accounts.json  contacts.json
data/default-ng/jira/: issues.json
data/default-ng/oracle/: invoices.json
data/default-ng/power-apps/: sales_orders.json
data/default-ng/power-bi/: pipeline_by_stage.json  revenue_by_quarter.json
data/default-ng/salesforce/: cases.json  contacts.json  opportunities.json
data/default-ng/sap/: order_items.json  products.json  sales_orders.json
data/default-ng/servicenow/: incidents.json
data/default/jira/: issues.json
docs/: app-profile-catalog.md  architecture.md  url-pattern-taxonomy.md  vision.md
docs/adr/: 001-single-harness-yaml.md  002-keycloak.md  003-extension-model.md  004-uv-workspace.md  005-response-contracts.md
docs/api/: fake-idp-api.md  harness-api.md  metrics-api.md
docs/dev/: developer-setup.md
docs/guides/: contribution-guide.md
docs/specs/: app-profile-spec.md  challenge-catalog.md  cli-spec.md  config-schema.md  data-generation-spec.md  fake-idp-spec.md  metrics-spec.md  plugin-spec.md  routing-spec.md  runtime-cli-spec.md  runtime-debug-cli-spec.md  service-boundaries.md  testing-strategy.md  variant-model.md
infra/: docker-compose.yml  hosts.txt
infra/caddy/: Caddyfile
infra/keycloak/: harness-realm.json
infra/prometheus/: prometheus.yml
scripts/: catalog_urls.py  check-hosts.ps1  generate_data.py  generate_fixtures.py
src/api/: app.py  router.py
src/backend/: app_repository.py  canonical_store.py  data_loader.py  pipeline.py  service.py  shaper.py
src/core/: config.py  manifest.py  matcher.py  models.py  resolver.py  sample_params.py  schema.py
src/datamodel/: repositories.py
src/frontend/: renderer.py
src/harness/: app.py  metrics.py  renderer.py  router.py
src/platform_cli/: __init__.py  main.py
src/runtime_cli/: formatters.py  main.py
static/css/: base.css
static/js/: list.js
templates/: base.html
templates/confluence/: home.html  page.html
templates/dynamics/: home.html  record.html
templates/jira/: home.html  issue.html
templates/layouts/: default.html
templates/oracle/: home.html  welcome.html
templates/power-apps/: app.html  home.html
templates/power-bi/: home.html  report.html
templates/salesforce/: account_detail.html  account_list.html  contact_detail.html  dashboard.html  error.html  opportunity_detail.html
templates/sap/: home.html  shell.html
templates/servicenow/: home.html  incident.html
templates/shared/: detail.html  error.html  list.html
templates/sharepoint/: documents.html  home.html
templates/tableau/: home.html  view.html
templates/workday/: home.html  task.html
tests/: _integration_cases.py  conftest.py  test_content_negotiation.py  test_core_config.py  test_core_match.py  test_core_resolve.py  test_data_default_ng.py  test_data_loader.py  test_error_responses.py  test_integration.py  test_manifest.py  test_match_data.py  test_metrics.py  test_pipeline.py  test_platform_cli.py  test_renderer.py  test_router.py  test_runtime_cli.py  test_scenarios.py  test_schema.py  test_shaper.py  test_tripwires.py
(+98 files in other folders)
