[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "testharness-webapps"
dynamic = ["version"]
description = "Local platform mimicking enterprise web apps for automation testing"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faker>=40.19.1",
    "pyyaml>=6.0.3",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "prometheus-client>=0.21",
    "jinja2>=3.1",
]

[tool.hatch.version]
path = "src/harness/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "httpx>=0.28",
    "pytest>=8.3",
    "pytest-xdist>=3.6",
    "ruff>=0.9",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: requires live Docker stack — run `just up` first",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.uv]
virtual = true
